--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
+    "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
     "next": "latest",
     "postcss": "8.4.24",
