--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "@supabase/supabase-js": "latest",
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
-    "next": "latest",
+    "next": "^14.0.1",
+    "node": "^21.1.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "server-only": "^0.0.1",
-    "tailwindcss": "3.3.2"
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.25",
     "@types/react-dom": "18.2.5",
     "encoding": "^0.1.13",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.1.6"
   }
 }
