--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
     "build": "next build",
     "start": "next start"
   },
+  "engines": {
+    "node": "18.17.0"
+  },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
     "next": "^14.0.1",
-    "node": "^20.2.0",
+    "node": "^18.17.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.2.0",
+    "@types/node": "^18.17.0",
     "@types/react": "^18.2.25",
     "@types/react-dom": "18.2.5",
     "encoding": "^0.1.13",
