--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/node": "18.18.2",
     "@types/react": "^18.2.25",
+    "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "18.2.5",
     "encoding": "^0.1.13",
     "tailwindcss": "^3.3.5",
