--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
     "next": "^14.0.1",
+    "papaparse": "^5.4.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "18.18.2",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.25",
     "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "18.2.5",
