--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@supabase/supabase-js": "latest",
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.4.1",
     "next": "^14.0.1",
     "papaparse": "^5.4.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1"
   },
